--- a/Assets/WebGLTemplates/NoteCAD2/TemplateData/style.css
+++ b/Assets/WebGLTemplates/NoteCAD2/TemplateData/style.css
@@ -1,10 +1,19 @@
-
-.webgl-content {
-	margin: 0px;
-	width: 96%;
-	height:95%;
-	position: absolute;
+html, body {
+    margin: 0;
+    padding: 0;
 }
+
+#FileUploadingPluginInput,
+#BinaryFileInput {
+    display:none;
+}
+
+#gameContainer {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
 .webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 .webgl-content .logo {background: url('progressLogo.Light.png') no-repeat center / contain; width: 154px; height: 130px;}
 .webgl-content .progress {height: 18px; width: 141px; margin-top: 90px;}
